# IntuLing

./: .gitignore  README.md  package.json
backend/: .env.example  alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 0001_create_prompt_templates.py
backend/src/intuling_api/: __init__.py  cli.py  main.py
backend/src/intuling_api/ai/: providers.py
backend/src/intuling_api/api/: router.py
backend/src/intuling_api/api/routes/: ai.py  health.py
backend/src/intuling_api/core/: config.py
backend/src/intuling_api/db/: base.py  session.py
backend/src/intuling_api/models/: __init__.py  prompt_template.py
backend/src/intuling_api/schemas/: ai.py  health.py
backend/tests/: test_health.py
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css  main.tsx
frontend/src/components/layout/: app-shell.tsx
frontend/src/components/ui/: button.tsx
frontend/src/features/chat/: chat-workspace.tsx
frontend/src/features/system/: health-badge.tsx
frontend/src/lib/: api-client.ts
frontend/src/pages/: coming-soon-page.tsx
frontend/src/providers/: query-provider.tsx
