[project]
name = "intuling-api"
version = "0.1.0"
description = "FastAPI backend for the IntuLing English learning agent."
readme = "README.md"
authors = [
    { name = "Fuzee2046", email = "1984214741@qq.com" }
]
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "fastapi>=0.138.2",
    "langchain>=1.3.11",
    "langchain-deepseek>=1.1.0",
    "langchain-openai>=1.3.3",
    "langsmith>=0.9.4",
    "pydantic-settings>=2.14.2",
    "psycopg[binary]>=3.3.2",
    "python-dotenv>=1.2.2",
    "sqlalchemy[asyncio]>=2.0.51",
    "tenacity>=9.1.4",
    "uvicorn[standard]>=0.49.0",
]

[project.scripts]
intuling-api = "intuling_api.cli:main"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.13"
plugins = ["pydantic.mypy"]
strict = true
warn_unused_ignores = true
warn_return_any = true
